--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,6 +3,6 @@ import Layout from "../layouts/Layout.astro";
 import Tree from "../components/Tree.vue";
 ---
 
-<Layout title="Welcome to Astro.">
+<Layout title="Constituwuncy">
   <Tree client:load />
 </Layout>
