--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -18,7 +18,46 @@ const { title } = Astro.props;
   <body
     class="flex min-h-screen flex-col items-center justify-center bg-stone-900 text-white"
   >
+    <!-- <header class="absolute left-8 top-8">
+      <h1 class="text-4xl font-bold text-stone-700">
+        Constitu<span class="text-stone-400 underline decoration-wavy">w</span
+        >uncy
+      </h1>
+    </header> -->
     <slot />
+    <footer class="absolute bottom-8 left-8 text-stone-400">
+      <h1 class="mb-4 text-4xl font-bold text-stone-700">
+        Constitu<span class="text-stone-400 underline decoration-wavy">w</span
+        >uncy
+      </h1>
+      <h1>
+        <div
+          class="inline-block origin-center translate-y-[1.2rem] text-5xl"
+          style="line-height: 0 !important;"
+        >
+          *
+        </div>
+        <b>Note:</b> this software <i class="underline decoration-wavy"
+          >tries its best</i
+        >, but occasionally makes silly mistakes.
+      </h1>
+    </footer>
+    <a
+      class="absolute bottom-8 right-8 rounded-xl p-2 text-stone-400 duration-300 hover:scale-125 hover:bg-stone-400 hover:text-stone-900"
+      href="https://github.com/PickleNik/constituwuncy"
+      style="text-decoration: none;"
+    >
+      <svg
+        role="img"
+        height="2em"
+        fill="currentColor"
+        viewBox="0 0 24 24"
+        xmlns="http://www.w3.org/2000/svg"
+        ><title>GitHub</title><path
+          d="M12 .297c-6.63 0-12 5.373-12 12 0 5.303 3.438 9.8 8.205 11.385.6.113.82-.258.82-.577 0-.285-.01-1.04-.015-2.04-3.338.724-4.042-1.61-4.042-1.61C4.422 18.07 3.633 17.7 3.633 17.7c-1.087-.744.084-.729.084-.729 1.205.084 1.838 1.236 1.838 1.236 1.07 1.835 2.809 1.305 3.495.998.108-.776.417-1.305.76-1.605-2.665-.3-5.466-1.332-5.466-5.93 0-1.31.465-2.38 1.235-3.22-.135-.303-.54-1.523.105-3.176 0 0 1.005-.322 3.3 1.23.96-.267 1.98-.399 3-.405 1.02.006 2.04.138 3 .405 2.28-1.552 3.285-1.23 3.285-1.23.645 1.653.24 2.873.12 3.176.765.84 1.23 1.91 1.23 3.22 0 4.61-2.805 5.625-5.475 5.92.42.36.81 1.096.81 2.22 0 1.606-.015 2.896-.015 3.286 0 .315.21.69.825.57C20.565 22.092 24 17.592 24 12.297c0-6.627-5.373-12-12-12"
+        ></path></svg
+      >
+    </a>
   </body>
 </html>
 <style is:global>
